<resources>
    <string name="app_name">Banderas Quiz</string>
    <string name="play">Jugar</string>
    <string name="anim">Anim</string>
    <string name="welcome">Bienvenido al Quiz de Banderas</string>
    <string name="correct">Bien:</string>
    <string name="wrong">Mal:</string>
    <string name="question">Preguntas:</string>
    <string name="empty">Vacías:</string>
    <string name="success">Acierto:</string>
    <string name="quit">Salir</string>
</resources>
